--- a/src/components/spinningCube/spinningCube.styles.css
+++ b/src/components/spinningCube/spinningCube.styles.css
@@ -23,13 +23,13 @@
   height: 200px;
   line-height: 200px;
   text-align: center;
-  box-shadow: inset 0px 0px 0px 1px white;
+  box-shadow: inset 0px 0px 0px 1px #ffd700;
   background: black;
   color: white;
   display: block;
   position: absolute;
-  -webkit-box-shadow: 5px 5px 15px 5px #FFFEFC; 
-box-shadow: 5px 5px 15px 5px #FFFEFC;
+  -webkit-box-shadow: 5px 5px 15px 5px #ffd700; 
+box-shadow: 5px 5px 15px 5px #ffd700;
 }
 
 .cube div.top {
