white list color changed

--- a/src/components/spinningCube/spinningCube.styles.css
+++ b/src/components/spinningCube/spinningCube.styles.css
@@ -23,12 +23,12 @@
   height: 200px;
   line-height: 200px;
   text-align: center;
-  box-shadow: inset 0px 0px 0px 1px #ffd700;
+  box-shadow: inset 2px 2px 2px 2px #f77f08;
   background: black;
-  color: white;
+  color: #f77f08;
   display: block;
   position: absolute;
-  -webkit-box-shadow: 5px 5px 15px 5px #ffd700; 
+  -webkit-box-shadow: 5px 5px 15px 5px 	#f77f08; 
 box-shadow: 5px 5px 15px 5px #ffd700;
 }
 
