--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  height: 100vh;
+  margin-top: 12vh;
+  height: 108vh;
   text-align: center;
   background-color: black;
 }
@@ -12,6 +13,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(245, 114, 8);
 }
 
